[package]
name = "ivory"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
keywords = ["php", "php-extension"]
description = "A library to build PHP extensions in Rust."
license = "MIT"
repository = "https://github.com/rethinkphp/php-rs"
edition = "2018"

[dependencies]
libc = "0.2.50"
ivory-macro = { version = "0.1", path = "macro" }
ivory-sys = { version = "7.3", path = "sys" }

[lib]
name = "ivory"

[workspace]